# Research-

./: .gitignore  PX4_FIXED_WING_CONTROLLER_DETAILED_EXPLANATION.md  README.md  px4_fw_architecture.docx
fw_pitch_controller/: CMakeLists.txt
fw_pitch_controller/include/: fw_pitch_att_ctrl.h  fw_pitch_controller.h  fw_pitch_params.h  fw_pitch_rate_ctrl.h  fw_pitch_tecs.h
fw_pitch_controller/src/: fw_pitch_att_ctrl.c  fw_pitch_controller.c  fw_pitch_rate_ctrl.c  fw_pitch_tecs.c
fw_pitch_controller/test/: test_pitch_controller.c
px4_att_control/: CMakeLists.txt
px4_att_control/examples/: pitch_unstable_sim.cpp  step_response.cpp
px4_att_control/include/px4_att_control/: attitude_control_pipeline.hpp  attitude_controller.hpp  control_allocator.hpp  math_types.hpp  params.hpp  px4_att_control.hpp  rate_controller.hpp
px4_fw_controllers/common/: math_utils.hpp  rate_control.hpp  uorb_msgs.hpp
px4_fw_controllers/fw_att_control/: FixedwingAttitudeControl.cpp  FixedwingAttitudeControl.hpp  fw_pitch_controller.cpp  fw_pitch_controller.hpp  fw_roll_controller.cpp  fw_roll_controller.hpp  fw_wheel_controller.cpp  fw_wheel_controller.hpp  fw_yaw_controller.cpp  fw_yaw_controller.hpp
px4_fw_controllers/fw_autotune_attitude_control/: fw_autotune_attitude_control.hpp
px4_fw_controllers/fw_lateral_longitudinal_control/: FwLateralLongitudinalControl.hpp
px4_fw_controllers/fw_mode_manager/launchdetection/: LaunchDetector.cpp  LaunchDetector.hpp
px4_fw_controllers/fw_mode_manager/runway_takeoff/: RunwayTakeoff.cpp  RunwayTakeoff.hpp
px4_fw_controllers/fw_rate_control/: FixedwingRateControl.cpp  FixedwingRateControl.hpp
simulink_px4_fw_architecture/: PX4_FW_PITCH_ARCHITECTURE.md  build_px4_fw_pitch_architecture.m  px4_fw_pitch_parameters.m  run_pitch_simulation.m
